--- a/aBuild.yaml
+++ b/aBuild.yaml
@@ -3,3 +3,7 @@ extDependencies:
   - url: git@cakeface.de:aBuild/gtest
   - url: git@cakeface.de:aBuild/jsoncpp
   - url: git@cakeface.de:aBuild/yaml-cpp
+projects:
+    - path: exampleSerializer
+      type: executable
+      auto: true
