--- a/aBuild.yaml
+++ b/aBuild.yaml
@@ -1,12 +1,8 @@
 name: Serializer
-extDependencies:
-  - url: git@cakeface.de:aBuild/gtest
-  - url: git@cakeface.de:aBuild/jsoncpp
-  - url: git@cakeface.de:aBuild/yaml-cpp
 extRepositories:
   - url: git@cakeface.de:aBuild/gtest
   - url: git@cakeface.de:aBuild/jsoncpp
   - url: git@cakeface.de:aBuild/yaml-cpp
 projects:
-    - path: exampleSerializer
+    - name: exampleSerializer
       type: executable
