--- a/busy.yaml
+++ b/busy.yaml
@@ -1,8 +1,8 @@
 name: Serializer
 extRepositories:
-  - url: git@cakeface.de:aBuild/gtest
-  - url: git@cakeface.de:aBuild/jsoncpp
-  - url: git@cakeface.de:aBuild/yaml-cpp
+  - url: git@github.com:SGSSGene/gtest
+  - url: git@github.com:SGSSGene/jsoncpp
+  - url: git@github.com:SGSSGene/yaml-cpp
 projects:
     - name: exampleSerializer
       type: executable
